samples/_failures_safe/1761517396_4bcb89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57a1f858.c: In function ‘main’:
./samples/SAFE/__tmp_57a1f858.c:147:12: error: missing terminating " character
  147 |     printf("Enter log entries (format: YYY
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_57a1f858.c:147:5: error: expected expression at end of input
  147 |     printf("Enter log entries (format: YYY
      |     ^~~~~~
./samples/SAFE/__tmp_57a1f858.c:147:5: error: expected declaration or statement at end of input
